deploy/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hobby-lobby-ingress
  namespace: hobby-lobby
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: hobby-lobby
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hobby-lobby-frontend
                port:
                  number: 80
